Worked on validation

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <h1>Home</h1>
-  <p><a href="/registration">Register as a new user</p>
+  <p><a href="/registration">Register</p>
   <p><a href="/login-page">Login</p>
-  <p><a href="/users">View all users</a></p>
+  <p><a href="/users">View users</a></p>
 </body>
 </html>
