--- a/public/registration.html
+++ b/public/registration.html
@@ -12,7 +12,7 @@
       <p><input type="text" name="username" placeholder="Username (6 - 24 characters)" /></p>
       <p><input type="email" name="email" placeholder="Valid email (Eg: john@gmail.com)" /></p>
       <p><input type="password" name="password" placeholder="Password (6 - 24 characters)" /></p>
-      <p><input type="password" name="confirmedpassword" placeholder="Confirm your password" /></p>
+      <p><input type="password" name="confirmedpassword" placeholder="Confirm password" /></p>
       <p><input type="checkbox" id="toggler"><label for="toggler">Show Passwords</label></p>
       <p><button type="submit">Register now</button></p>
     </form>
