Made comparePassword async

--- a/public/registration.html
+++ b/public/registration.html
@@ -9,10 +9,10 @@
 <body>
   <h1>Register new user</h1>
     <form method="post" action="/register">
-      <p><input type="text" name="username" placeholder="Username (6 - 24 characters)" /></p>
-      <p><input type="email" name="email" placeholder="Valid email (Eg: john@gmail.com)" /></p>
-      <p><input type="password" name="password" placeholder="Password (6 - 24 characters)" /></p>
-      <p><input type="password" name="confirmedpassword" placeholder="Confirm password" /></p>
+      <p><input type="text" value="Daddy Levy" name="username" placeholder="Username (6 - 24 characters)" /></p>
+      <p><input type="email" value="dadlevy@gmail.com" name="email" placeholder="Valid email (Eg: john@gmail.com)" /></p>
+      <p><input type="password" value="Heruka108!" name="password" placeholder="Password (6 - 24 characters)" /></p>
+      <p><input type="password" value="Heruka108!" name="confirmedpassword" placeholder="Confirm password" /></p>
       <p><input type="checkbox" id="toggler"><label for="toggler">Show Passwords</label></p>
       <p><button type="submit">Register now</button></p>
     </form>
